--- a/src/App.css
+++ b/src/App.css
@@ -12,21 +12,18 @@ body {
 }
 
 .app-container {
-  flex: 1 0 auto;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
 }
 
-.main-content {
-  flex: 1 0 auto;
+.content {
+  flex: 1;
 }
 
 .footer {
   flex-shrink: 0;
-}
-
-footer {
-  background-color: #f0f0f0; /* Example background color */
+  background-color: #f0f0f0;
   padding: 20px;
   text-align: center;
 }
